--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Effectiwe Solutions for Your Business" />
     <title>Effectiwe Solutions for Your Business</title>
-    <link rel="stylesheet" href="https: //cdnjs.com/libraries/modern-normalize">
+    <link rel="stylesheet" href="https: //cdnjs.com/libraries/modern-normalize" />
     <link rel="stylesheet" href=" ./css/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
@@ -23,7 +23,7 @@
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
 
-        </nav class="navigation">
+        </nav>
         <address>
             <ul>
                 <li>
@@ -99,32 +99,32 @@
             <h2 class="main-title-two">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 1.jpg" alt="Banking App" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card1.jpg" alt="Banking App" width="360" />
                     <h3 class="main-list-title">Banking App</h3>
                     <p class="main-text">App</p>
                 </li>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 2.jpg" alt="Cashless Payment" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card2.jpg" alt="Cashless Payment" width="360" />
                     <h3 class="main-list-title">Cashless Payment</h3>
                     <p class="main-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 3.jpg" alt="Meditation App" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card3.jpg" alt="Meditation App" width="360" />
                     <h3 class="main-list-title">Meditation App</h3>
                     <p class="main-text">App</p>
                 </li>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 2.1.jpg" alt="Taxi Service" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card2.1.jpg" alt="Taxi Service" width="360" />
                     <h3 class="main-list-title">Taxi Service</h3>
                     <p class="main-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 2.2.jpg" alt="Screen Illustrations" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card2.2.jpg" alt="Screen Illustrations" width="360" />
                     <h3 class="main-list-title">Screen Illustrations</h3>
                     <p class="main-text">Design</p>
                 </li>
                 <li>
-                    <img src="./images/Our Portfolio/Projekt Card 2.3.jpg" alt="Online Courses" width="360" />
+                    <img src="./images/Our Portfolio/Projekt Card2.3.jpg" alt="Online Courses" width="360" />
                     <h3 class="main-list-title">Online Courses</h3>
                     <p class="main-text">Marketing</p>
                 </li>
