--- a/index.html
+++ b/index.html
@@ -7,30 +7,42 @@
     <title>Effectiwe Solutions for Your Business</title>
     <link rel="stylesheet" href="https: //cdnjs.com/libraries/modern-normalize" />
     <link rel="stylesheet" href=" ./css/styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href=https://fonts.googleapis.com href="https://fonts.gstatic.com" <link rel="preconnect"
+        href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        // <uniquifier>: Use a unique and descriptive class name
+    // <weight>: Use a value from 100 to 900
+
+        .raleway-<uniquifier> {
+            font-family: "Raleway", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: <weight>;
+                font-style: normal;
+                }
+                rel="stylesheet"> />
 </head>
 
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
             <ul class="header-menu-list">
 
-                <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
+                <li class="header-menu-item-wan"><a class="header-menu-link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
 
         </nav>
-        <address>
+        <address class="address">
             <ul>
                 <li>
-                    <a class="navigation-address" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                    <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
                 </li>
                 <li>
-                    <a class="navigation-address" href="tel:+110001111111">+11 (000) 111-11-11</a><br />
+                    <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a><br />
                 </li>
             </ul>
         </address>
